fix: adjust footer visibility logic in Layout component

--- a/src/components/PostIt/PostIt.module.css
+++ b/src/components/PostIt/PostIt.module.css
@@ -1,7 +1,7 @@
 .postit {
   position: fixed;
-  bottom: 30rem;
-  right: 10rem;
+  bottom: 25rem;
+  right: 60rem;
   width: 200px;
   background-color: #FFF0A0;
   border-radius: 4px;
